chore: configurar paths de TS y agregar algoritmo de productos más baratos
- Activada opción resolveJsonModule en tsconfig
- Configurados alias de paths: @/* y @shared/*
- Ajustados includes para reconocer shared y archivos .ts
- Reemplazadas importaciones relativas largas por @shared/...
- Agregado algoritmo utilitario para obtener productos más baratos disponibles

--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -7,7 +7,11 @@
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "paths": {
+      "@/*": ["./*"],
+      "@shared/*": ["../shared/*"]
+    }
   },
-  "include": ["./api/src", "../shared"]
+  "include": ["./api/src", "../shared", "**/*.ts"]
 }
