--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -8,10 +8,11 @@
     "esModuleInterop": true,
     "skipLibCheck": true,
     "resolveJsonModule": true,
+    "baseUrl": ".",
     "paths": {
       "@/*": ["./*"],
       "@shared/*": ["../shared/*"]
     }
   },
-  "include": ["./api/src", "../shared", "**/*.ts"]
+  "include": ["./api/src", "**/*.ts"]
 }
